# scroll-reth

./: .env.default  .gitignore  Cargo.toml  README.md  l1_message_queue.json  scroll_chain_abi.json
src/: main.rs  rollup_sync_service.rs  rollup_sync_service_util.rs  sync_service.rs
