[package]
name = "scroll-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-db = { git = "https://github.com/i-m-aditya/reth", branch = "scroll-changes", features = ["test-utils", "mdbx"] }
reth-stages = { git = "https://github.com/i-m-aditya/reth", branch = "scroll-changes" ,features = ["test-utils"] }

ethers = { version = "2.0.11" }
tokio = { version = "1.28.0", features = ["full"] }
dotenv = "0.15.0"
alloy-sol-types = { version = "0.7.2", features = ["json"] }
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
alloy-primitives = { version = "0.7.2", features = ["rlp"]}
alloy-rlp = {version = "0.3.4", features = ["derive"]}